[package]
name = "guessing-game"
version = "0.1.0"
edition = "2021"
authors = [ "Tarik Hasan khan" ]
description = "A simple variation of the guessing game from the Rust book"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
colored = "2.0.0"
rand = "0.8.5"
